--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
      - 114.114.114.114
     ports:
      - "5000:5000"
+    network_mode: "host"
 
   redis:
     image: "redis:alpine"
+    network_mode: "host"
 
