--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     dns:
      - 8.8.8.8
      - 114.114.114.114
-    ports:
-     - "5000:5000"
+    # ports:
+    #  - "5000:5000"
     network_mode: "host"
 
   redis:
