--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,9 @@ services:
 
   web:
     build: .
-    dns:
-     - 8.8.8.8
-     - 114.114.114.114
-    # ports:
-    #  - "5000:5000"
-    network_mode: "host"
+    ports:
+     - "5000:5000"
 
   redis:
     image: "redis:alpine"
-    network_mode: "host"
 
