--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,11 @@ services:
 
   web:
     build: .
+    volumes:
+      - /root/web:/code
     ports:
      - "5000:5000"
+    command: pwd && python app.py
 
   redis:
     image: "redis:alpine"
