--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - /root/web:/code
     ports:
      - "5000:5000"
-    command: echo "pwd:" && pwd && ls && python app.py
+    command: python app.py
 
   redis:
     image: "redis:alpine"
